# pyscheme

./: README.md  pyproject.toml
src/pyscheme/: __init__.py  pyscheme.py
